# picoruby-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  idf_component.yml  install.sh  picoruby-esp32.c  picoruby-esp32.h
components/picoruby-esp32/: CMakeLists.txt  README.md  esp32_build_config.rb  idf_component.yml  picoruby-esp32.c
main/: CMakeLists.txt  main.c
mrblib/: main_task.rb
